Reload project and update

--- a/compose-files/webapp-compose.yml
+++ b/compose-files/webapp-compose.yml
@@ -2,8 +2,8 @@ services:
   pop-webapp:
     container_name: pop-webapp
     ports:
-      - 8080:8080
-    image: pop-webapp:1.0
+      - "8080:8080"
+    image: pop-webapp:1.0 # l'image est stocké en local
     environment:
       - "ODOO_URL=http://127.0.0.1:8069/"
       - "PGADMIN_URL=http://127.0.0.1:80"
