--- a/kubernetes/database/postgres-deploy.yml
+++ b/kubernetes/database/postgres-deploy.yml
@@ -2,6 +2,7 @@ piVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres-deploy
+  namespace: popgroup
   labels:
     app: postgres
     env: prod
