Fix: error manifests

--- a/kubernetes/odoo/odoo-deploy.yml
+++ b/kubernetes/odoo/odoo-deploy.yml
@@ -21,9 +21,9 @@ spec:
         env:
         - name: USER
           valueFrom:
-            secretKeyRef:
+            configMapKeyRef:
               key: user
-              name: odoo-secret
+              name: odoo-cm
         - name: PASSWORD
           valueFrom:
             secretKeyRef:
@@ -34,10 +34,10 @@ spec:
             configMapKeyRef:
               key: host
               name: odoo-cm
-        # resources:
-        #   limits:
-        #     memory: "128Mi"
-        #     cpu: "500m"
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
         - containerPort: 8069
         volumeMounts:
