--- a/kubernetes/database/postgres-pvc.yml
+++ b/kubernetes/database/postgres-pvc.yml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: odoo-pvc
-  namespace: popgroup
+  name: postgres-pvc
   labels:
     env: prod
+    app: postgres
     type: local
-    app: odoo
 spec:
   resources:
     requests:
