--- a/kubernetes/pgadmin/pgadmin-deploy.yml
+++ b/kubernetes/pgadmin/pgadmin-deploy.yml
@@ -29,10 +29,10 @@ spec:
             secretKeyRef:
               name: pgadmin-secret
               key: password
-        # resources:
-        #   limits:
-        #     memory: "128Mi"
-        #     cpu: "500m"
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
         - containerPort: 80
       # Monter le fichier server.json dans le container
@@ -40,7 +40,7 @@ spec:
         - name: pgadmin-persistent-storage
           mountPath: /pgadmin4/servers.json
           subPath: servers.json
-        - name: pgadmin-persitent-storage-data
+        - name: pgadmin-persistent-storage-data
           mountPath: /var/lib/pgadmin
       volumes:
       - name: pgadmin-persistent-storage
