--- a/kubernetes/pgadmin/pgadmin-secret.yml
+++ b/kubernetes/pgadmin/pgadmin-secret.yml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: pgadmin-secret
+  namespace: popgroup
+  labels:
+    env: prod
+    app: pgadmin
 type: Opaque
 data:
   password: cGdhZG1pbiAtbgo=
