Fix: verify all variables

--- a/kubernetes/database/kustomization.yml
+++ b/kubernetes/database/kustomization.yml
@@ -3,5 +3,5 @@ resources:
   - postgres-secret.yml
   - postgres-deploy.yml
   - postgres-svc.yml
-  - postgres-pv.yml
-  - postgres-pvc.yml
+#  - postgres-pv.yml
+#  - postgres-pvc.yml
