--- a/kubernetes/database/postgres-deploy.yml
+++ b/kubernetes/database/postgres-deploy.yml
@@ -34,16 +34,18 @@ spec:
             configMapKeyRef:
               key: user
               name: postgres-cm
-        # resources:
-        #   limits:
-        #     memory: "128Mi"
-        #     cpu: "500m"
         ports:
         - containerPort: 5432
-        volumeMounts:
-        - name: postgres-storage
-          mountPath: /var/lib/postgresql/data
-      volumes:
-      - name: postgres-storage
-        persistentVolumeClaim:
-          claimName: postgres-pvc
+#        resources:
+#          limits:
+#            memory: "128Mi"
+#            cpu: "500m"
+#        ports:
+#        - containerPort: 5432
+#        volumeMounts:
+#        - name: postgres-storage
+#          mountPath: /var/lib/postgresql/data
+#      volumes:
+#      - name: postgres-storage
+#        persistentVolumeClaim:
+#          claimName: postgres-pvc
