--- a/kubernetes/pgadmin/pgadmin-cm.yml
+++ b/kubernetes/pgadmin/pgadmin-cm.yml
@@ -11,12 +11,10 @@ data:
     {
       "Servers": {
         "1": {
-          "Name": "pop-webapp server1",
+          "Name": "pop-webapp-server1",
           "Group": "Server Group 1",
           "Port": 5432,
           "Host": "postgres-svc",
-          "Username": "odoo",
-          "Password": "pwdodoo",
           "SSLMode": "prefer",
           "MaintenanceDB": "postgres"
         }
