--- a/kubernetes/pgadmin/pgadmin-deploy.yml
+++ b/kubernetes/pgadmin/pgadmin-deploy.yml
@@ -29,26 +29,21 @@ spec:
             secretKeyRef:
               name: pgadmin-secret
               key: password
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
         ports:
         - containerPort: 80
-      # Monter le fichier server.json dans le container
         volumeMounts:
-        - name: pgadmin-persistent-storage
+        - name: pgadmin-storage
           mountPath: /pgadmin4/servers.json
           subPath: servers.json
-        - name: pgadmin-persistent-storage-data
+        - name: pgadmin-storage-data
           mountPath: /var/lib/pgadmin
       volumes:
-      - name: pgadmin-persistent-storage
+      - name: pgadmin-storage
         configMap:
           name: pgadmin-cm
           items:
           - key: servers.json
             path: servers.json
-      - name: pgadmin-persistent-storage-data
+      - name: pgadmin-storage-data
         persistentVolumeClaim:
           claimName: pgadmin-pvc
