--- a/kubernetes/odoo/odoo-secret.yml
+++ b/kubernetes/odoo/odoo-secret.yml
@@ -8,6 +8,5 @@ metadata:
     app: odoo
 type: Opaque
 data:
-  password: cHdkb2RvbyAtbgo=
-  user: b2RvbyAtbgo=
-
+  password: b2Rvbw==
+  user: b2Rvbw==
