--- a/kubernetes/pgadmin/pgadmin-deploy.yml
+++ b/kubernetes/pgadmin/pgadmin-deploy.yml
@@ -29,21 +29,25 @@ spec:
             secretKeyRef:
               name: pgadmin-secret
               key: password
+        # resources:
+        #   limits:
+        #     memory: "128Mi"
+        #     cpu: "500m"
         ports:
         - containerPort: 80
         volumeMounts:
-        - name: pgadmin-storage
+        - name: pgadmin-persitent-storage
           mountPath: /pgadmin4/servers.json
           subPath: servers.json
-        - name: pgadmin-storage-data
+        - name: pgadmin-persitent-storage-data
           mountPath: /var/lib/pgadmin
       volumes:
-      - name: pgadmin-storage
+      - name: pgadmin-persitent-storage
         configMap:
           name: pgadmin-cm
           items:
           - key: servers.json
             path: servers.json
-      - name: pgadmin-storage-data
+      - name: pgadmin-persitent-storage-data
         persistentVolumeClaim:
           claimName: pgadmin-pvc
