--- a/kubernetes/pop-webapp/pop-webapp-cm.yml
+++ b/kubernetes/pop-webapp/pop-webapp-cm.yml
@@ -7,5 +7,5 @@ metadata:
     env: prod
     app: pop-webapp
 data:
-  odoo_url: http://192.168.1.83:30010
-  pgadmin_url: http://192.168.1.83:30011
+  odoo_url: http://HOST:30010
+  pgadmin_url: http://HOST:30011
