Feat: write all playbook and test deploy kuberntes stack

--- a/ansible/playbooks/retrieve_kubeconfig.yml
+++ b/ansible/playbooks/retrieve_kubeconfig.yml
@@ -3,15 +3,31 @@
 - name: Retrieve kubeconfig file
   hosts: k3s
   tasks:
+    - name: Set permissions on k3s.yaml
+      become: yes
+      file:
+        path: /etc/rancher/k3s/k3s.yaml
+        mode: '0644'
+        owner: root
+        group: root
+
+    - name: Create kubeconfig directory if it doesn't exist
+      local_action:
+        module: file
+        path: "{{ playbook_dir }}/../kubeconfig"
+        state: directory
+        mode: '0755'
+
     - name: Copy file kubeconfig
       fetch:
         src: /etc/rancher/k3s/k3s.yaml
-        dest: $PWD/ansible/kubeconfig/kubeconfig
+        dest: "{{ playbook_dir }}/../kubeconfig/kubeconfig"
         flat: yes
     
     - name: Modify kubeconfig
       local_action:
         module: lineinfile
-        path: $PWD/ansible/kubeconfig/kubeconfig
-        regexp: '^    server: https://127.0.0.1:6443'
-        line: '^    server: https://{{ ansible_host }}:6443'
+        path: "{{ playbook_dir }}/../kubeconfig/kubeconfig"
+        regexp: '^    server: https://127.0.0.1:6443$'
+        line: '    server: https://{{ ansible_host }}:6443'
+        backrefs: yes
