Fix: security groups inbound rules and firewall status from local machine

--- a/ansible/playbooks/apply_manifests.yml
+++ b/ansible/playbooks/apply_manifests.yml
@@ -3,4 +3,4 @@
   hosts: localhost
   tasks:
     - name: Apply Kubernetes manifests
-      command: "kubectl --kubeconfig={{ playbook_dir }}/../kubeconfig/kubeconfig apply -k {{ playbook_dir }}/../../kubernetes --validate=false"
+      command: "kubectl --kubeconfig={{ playbook_dir }}/../kubeconfig/kubeconfig apply -k {{ playbook_dir }}/../../kubernetes --validate=false --insecure-skip-tls-verify"
