--- a/kubernetes/pop-webapp/pop-webapp-deploy.yml
+++ b/kubernetes/pop-webapp/pop-webapp-deploy.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pop-webapp
+  namespace: popgroup
   labels:
     env: prod 
     app: pop-webapp
