Feat: write odoo and pgadmin roles

--- a/ansible/roles/pop-webapp/tasks/main.yml
+++ b/ansible/roles/pop-webapp/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: Create network
   docker_network:
-    name: pop-network
+    name: "{{ network }}"
 
 - name: run pop-webapp
   docker_container:
