--- a/ansible/roles/pgadmin/defaults/main.yml
+++ b/ansible/roles/pgadmin/defaults/main.yml
@@ -1,2 +1,8 @@
 ---
-# defaults file for pgadmin
+# defaults file for pgdamin
+pgadmin_name: pgadmin
+pgadmin_email: toto@toto.com
+pgadmin_password: toto
+pgadmin_image: dpage/pgadmin4
+pgadmin_port: 8082
+network: "{{ network }}"
