--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,6 +16,7 @@ pipeline {
             steps {
                 script {
                     sh '''
+                        sudo chmod 0755 ./webapp
                         docker build --no-cache -f ${DOCKER_DIR}/${DOCKERFILE_NAME} -t ${DOCKERHUB_ID}/${DOCKER_IMAGE}:${DOCKER_TAG} ${DOCKER_DIR}/.
                     '''
                 }
