--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -35,7 +35,7 @@
 
 - name: add user to docker group
   user:
-    name: {{ ansible_user }}
+    name: "{{ ansible_user }}"
     groups: docker
     append: yes
   become: yes
